Added new endpoint to change status of existing reservation updated swagger
