# src/routes/reservation.routes.js
@@ -6,5 +6,9 @@ const reservationRouter = express.Router();
 reservationRouter.post('/', reservationController.Post());
 reservationRouter.get('/owner', reservationController.GetByOwnerAndStatus());
 reservationRouter.get('/user', reservationController.GetByUserAndStatus());
+reservationRouter.patch(
+  '/status',
+  reservationController.PatchReservationStatus()
+);
 
 export default reservationRouter;
